add auth staff
